# Future-of-Trust

./: Cargo.toml
custody_engine/: Cargo.toml
custody_engine/cli/: main.rs
custody_engine/engine/: Cargo.toml
custody_engine/engine/src/: bbs.rs  bootstrap.rs  discover.rs  error.rs  lib.rs  logging.rs  types.rs
custody_engine/engine/src/audit/: mod.rs
custody_engine/engine/src/crypto/: keys.rs  mod.rs  signing.rs
custody_engine/engine/src/delete/: custody_vault_service.rs  key_service.rs  mod.rs  vault.rs  vc_storage.rs  vc_store_3.rs  vc_store_encrypt.rs
custody_engine/engine/src/dkg/: coordinator.rs  dkg_engine.rs  orchestrator.rs  types.rs
custody_engine/engine/src/mpc/: coordinator.rs  mod.rs  signing_session.rs
custody_engine/engine/src/registry/: issuer_registry.rs  operational_did_registry.rs
custody_engine/engine/src/tests/: audit_log_tests.rs  bbs_key_add_test.rs  custody_flow.rs  mpc_test.rs  shard_rotation_test.rs  vault_test.rs
custody_engine/engine/src/utils/: filesname.rs
custody_engine/engine/src/vault/: backend.rs  mod.rs  signing.rs  vc_store_2.rs
custody_engine/server/: Cargo.toml  build.rs
custody_engine/server/proto/: custody.proto  dkg.proto  issuer.proto  mpc.proto  registry.proto  relay.proto  vault.proto
custody_engine/server/service/: custody_management_service.rs  dkg_service.rs  health_service.rs  issuer_service.rs  mpc_service.rs  registry_service.rs  relay.rs  signing_service.rs  vault_service.rs  vc_service.rs
custody_engine/server/src/: main.rs
custody_engine/src/: error.rs  types.rs
custody_engine/src/mpc/: mod.rs
custody_engine/src/vault/: mod.rs
(+3 files in other folders)
