[package]
name = "custody_engine"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "engine",
    "cli",
    "server",
]

[dependencies]
# MPC and threshold signing support
frost-core = "2.1"
frost-ed25519 = "2.1"

# TEE vault sealing (simulated)
serde = { version = "1", features = ["derive"] }
bincode = "2.0"

#crypto primitives
rand = "0.9"
ed25519-dalek = "2.1"
sha2 = "0.10"

#error handling
thiserror = "2.0"
anyhow = "1.0"

#logging
tracing = "0.1"
tracing-subscriber = "0.3"

clap = { version = "4", features = ["derive"]}
hex = "0.4"

