[package]
name = "custody-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.30", features = ["full"] }
tonic = { version = "0.9", features = ["transport"] }
prost = "0.11"
prost-types = "0.11"
tracing = "0.1"
custody-engine = { path = "../engine" }

[build-dependencies]
tonic-build = "0.9"